fixed navsize on mobile

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -64,7 +64,8 @@
   .cm__navbar-links a {
     display: flex;
     flex-direction: column;
-    font-size: 14px;
+    /* font-size: 12px; */
+    font-size: 16px;
     margin-top: 1rem;
   }
 }
@@ -73,7 +74,8 @@
 
 @media (max-width: 768px) {
   .cm__navbar-links a {
-    font-size: 16px;
+    /* font-size: 16px; */
+    padding: 10px;
   }
 }
 
